@startuml
!pragma layout smetana
allowmixing
skinparam componentStyle rectangle
skinparam backgroundColor transparent
skinparam packageStyle rectangle
skinparam portStyle solid
skinparam interfaceStyle rectangle

title Real-Time Access Service - Component Diagram
package "Real-Time Access Service" as RTAS {
  portin "ingress" as ingress
  portout "events" as events

  interface "IAccessServiceApi" as IAPI {
    + requestAccessGrant(request: AccessRequest): AccessGrantResult
  }

  interface "IAccessVectorRepository" as IRepo {
    + findVectorById(faceId: String): Optional<FaceVector>
  }

  interface "IFaceModelService" as IModel {
    + calculateSimilarityScore(requested: FaceVector, stored: FaceVector): double
  }

  interface "IMessagePublisherService" as IPub {
    + publishEvent(topic: String, event: DomainEvent)
  }

  package "Service Layer" {
    component "AccessServiceApiImpl" as AccessService
    component "AccessAuthorizationManager" as AAM
    component "GateController" as GC
    component "FaceVectorCache" as Cache
  }
' Responsibilities and context (single-line notes per guide)
note bottom of AccessService : Responsibilities: Facade, delegate to AAM
note bottom of AAM : Responsibilities: Authorization rules, cache lookup, publish events
note bottom of GC : Responsibilities: Physical gate control, status monitoring
note bottom of IAPI : Provided API for gateway/equipment
note bottom of IRepo : Persistence contract (encrypted face vectors)
note bottom of IModel : Co-located face model pipeline (IPC/gRPC)
note bottom of IPub : Message broker publishing
note bottom of Cache : Keeps hot vectors in-memory (Data Pre-Fetching)
}

package "Domain Model" {
  class "AccessRequest" as AccessRequest
  class "AccessGrantResult" as AccessGrantResult
  class "FaceVector" as FaceVector
}

package "Events" {
  interface "DomainEvent" as DomainEvent
  class "AccessAttemptEvent" as AccessAttemptEvent
}


' Provided/Required interfaces
AccessService ..|> IAPI
AAM ..|> IAPI
AAM -( IRepo
AAM --> Cache : "prefetch & lookup"
Cache -( IRepo
AAM -( IModel
AAM -( IPub

' Internal interactions
AccessService --> AAM : "requestAccessGrant()"
AAM --> GC : "controlGate(result, equipmentId)"

' Co-located face model node
node "Face Model Service (Real-Time Tier)" as FMS {
  component "VectorComparisonEngine" as VCE
}
VCE ..|> IModel

' Ports and external flows
ingress --> IAPI : "requestAccessGrant"
IPub --> events : "publishEvent(topic, event)"

' Domain model usage
IAPI ..> AccessRequest : uses
IAPI ..> AccessGrantResult : uses
IRepo ..> FaceVector : uses
IPub ..> DomainEvent : uses
AAM ..> AccessAttemptEvent : emits

legend right
  Access Service structure
  - Provided API facade
  - Required persistence/model/messaging services
  - Gate control, event publishing (AccessAttemptEvent)
end legend

@enduml
